--- a/static/stat501/note_stat501.Rmd
+++ b/static/stat501/note_stat501.Rmd
@@ -621,12 +621,17 @@ where the $g_k ∼ Ga(b, 1)$ are independent gamma random variables, and where  
 
 #### 2.1. The Case $PG(b,0)$
 
+The $PG(b,0)$ class of distributions is closely related to a subset of distributions that are surveyed by Biane, Pitman, and Yor (2001). This family of distributions, which we denote by $J^\star(b), b>0$, has close connections with <span style="color: red;">the Jacobi Theta and Riemann Zeta functions, and with Brownian excursions</span>. Its Laplace transform is
+
+\[E[\exp(-tJ^\star(b))]=\cosh^{-b}\sqrt{2t}\quad (4)\]
+
+implying that \(PG(b,0)\overset{\mathcal{D}}{=}\frac14J^\star(b)\)
 
 #### 2.2. The General $PG(b,c)$ Class
 
 \[p(x|b,c)=\frac{\exp(-\frac{c^2}2x) p(x|b,0)}{E[\exp x(-\frac{c^2}2\omega)]}\quad (5)\]
 
-where $p(x|b,0) $is the density of an $\omega\sim PG(b,0)$ random variable.
+where $p(x|b,0)$ is the density of an $\omega\sim PG(b,0)$ random variable.
 
 ### 3 A data-augmentation strategy
 
