--- a/static/stat501/note_stat501.Rmd
+++ b/static/stat501/note_stat501.Rmd
@@ -27,19 +27,10 @@ p_load(stargazer, pscl, mlmRev,mvtnorm, MASS, ggplot2,tidyverse,mlogit,BayesLogi
 
 #  {.tabset .tabset-fade .tabset-pills}
 
-## (Taylor-Rodríguez et al, 2017)
-
-### 1 Introduction
-
-### 2 Inference for a single model
-
-#### 2.1 The occupancy model with Probit link
-
-#### 2.2 An objective prior for (α, λ)
 
 ## (Albert &  Chib, 1993)
 
-James H. Albert & Siddhartha Chib (1993) Bayesian Analysis of Binary and Polychotomous Response Data, Journal of the American Statistical Association, 88:422, 669-679, DOI: 10.1080/01621459.1993.10476321
+James H. Albert & Siddhartha Chib (1993) Bayesian Analysis of Binary and Polychotomous Response Data, Journal of the American Statistical Association, 88:422, 669-679, [DOI: 10.1080/01621459.1993.10476321](https://doi.org/10.1080/01621459.1993.10476321)
 
 ### 1 Introduction
 
@@ -612,7 +603,7 @@ predict(z.probit, newdat, type="response")
 
 ## (Polson etal, 2013)
 
-Nicholas G. Polson, James G. Scott & Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, [DOI: 10.1080/01621459.2013.829001](https://www-tandfonline-com/doi/full/10.1080/01621459.2013.829001)
+Nicholas G. Polson, James G. Scott & Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, [DOI: 10.1080/01621459.2013.829001](https://www.tandfonline.com/doi/full/10.1080/01621459.2013.829001)
 
 ### Introduction
 
@@ -894,6 +885,30 @@ The data are included as a supplemental file.
 #### 5 Benchmarks: negative-binomial models
 
 #### 6 Extensions
+
+
+## (Choi & Hobert, 2013)
+
+Choi, H. M., & Hobert, J. P. (2013). The Polya-Gamma Gibbs sampler for Bayesian logistic regression is uniformly ergodic. [Electronic Journal of Statistics, 7, 2054-2064.](https://projecteuclid.org/euclid.ejs/1377005819)
+
+#### 1 Introduction
+
+#### 2 Polson, Scott and Windle’s algorithm
+
+## (Taylor-Rodríguez et al, 2017)
+
+Taylor-Rodríguez, D., Womack, A., Fuentes, C., & Bliznyuk, N. (2017). Intrinsic Bayesian Analysis for Occupancy Models. [Bayesian Anal., 12(3), 855-877.](https://projecteuclid.org/euclid.ba/1473431536)
+
+### 1 Introduction
+
+### 2 Inference for a single model
+
+#### 2.1 The occupancy model with Probit link
+
+#### 2.2 An objective prior for (α, λ)
+
+
+
 
 ## Resources
 
