--- a/static/stat566/sheet_inclass2020.Rmd
+++ b/static/stat566/sheet_inclass2020.Rmd
@@ -415,25 +415,29 @@ $2^{7-2}_{IV}$ &128&4 &32&  {\scriptsize F=ABCD;G=ABDE} \\
 $2^{7-3}_{IV}$ &128&8 &16&  {\tiny E=ABC;F=BCD;G=ACD} \\
 $2^{7-4}_{III}$&128&16&8 &  {\tiny D=AB;E=AC;F=BC;G=ABC}
 \end{tabular}
-\begin{tabular}{ c|c|c|c|c|c|c|c|l|l }
-A & B & C & D & E & F &{\tiny ABF}&{\tiny ABD}& Run\\
-- & - & - & - & - & - & -   & -   & (1) &{\scriptsize I=ABCE=BCDF=ADEF}\\
-+ & - & - & - & + & - & +   & +   & ae  &{\scriptsize A = BCE = DEF = ABCDF}\\
-- & + & - & - & + & + & -   & +   & bef &{\scriptsize B = ACE = CDF = ABDEF}\\
-+ & + & - & - & - & + & +   & -   & abf &{\scriptsize C = ABE = BDF = ACDEF}\\
-- & - & + & - & + & + & +   & -   & cef &{\scriptsize D = BCF = AEF = ABCDE}\\
-+ & - & + & - & - & + & -   & +   & acf &{\scriptsize E = ABC = ADF = BCDEF}\\
-- & + & + & - & - & - & +   & +   & bc  &{\scriptsize F = BCD = ADE = ABCEF}\\
-+ & + & + & - & + & - & -   & -   & abce&{\scriptsize BF = CD = ACEF = ABDE}\\
-- & - & - & + & - & + & +   & +   & df  &{\scriptsize AB = CE = ACDF = BDEF}\\
-+ & - & - & + & + & + & -   & -   & adef&{\scriptsize AC = BE = ABDF = CDEF}\\
-- & + & - & + & + & - & +   & -   & bde &{\scriptsize AD = EF = BCDE = ABCF}\\
-+ & + & - & + & - & - & -   & +   & abd &{\scriptsize AE = BC = DF = ABCDEF}\\
-- & - & + & + & + & - & -   & +   & cde &{\scriptsize AF = DE = BCEF = ABCD}\\
-+ & - & + & + & - & - & +   & -   & acd &{\scriptsize BD = CF = ACDE = ABEF}\\
-- & + & + & + & - & + & -   & -   & bcdf&{\scriptsize ABD = CDE = ACF = BEF}\\
-+ & + & + & + & + & + & +   & +   & abcdef&{\scriptsize ACD = BDE = ABF = CEF}
+\begin{tabular}{ l|c|c|c|c|c|c|c|c|c|l }
+Run&A & B & C & D & E & F &{\tiny ABD}&{\tiny ABF}& \\
+ (1) &- & - & - & - & - & - & -   & - & 1 &{\scriptsize I=ABCE=BCDF=ADEF}\\
+ ae  &+ & - & - & - & + & - & +   & + & 4 &{\scriptsize A = BCE = DEF = ABCDF}\\
+ bef &- & + & - & - & + & + & +   & - & 2 &{\scriptsize B = ACE = CDF = ABDEF}\\
+ abf &+ & + & - & - & - & + & -   & + & 3 &{\scriptsize C = ABE = BDF = ACDEF}\\
+ cef &- & - & + & - & + & + & -   & + & 3 &{\scriptsize D = BCF = AEF = ABCDE}\\
+ acf &+ & - & + & - & - & + & +   & - & 2 &{\scriptsize E = ABC = ADF = BCDEF}\\
+ bc  &- & + & + & - & - & - & +   & + & 4 &{\scriptsize F = BCD = ADE = ABCEF}\\
+ abce&+ & + & + & - & + & - & -   & - & 1 &{\scriptsize AB = CE = ACDF = BDEF}\\
+ df  &- & - & - & + & - & + & +   & + & 4 &{\scriptsize AC = BE = ABDF = CDEF}\\
+ adef&+ & - & - & + & + & + & -   & - & 1 &{\scriptsize AD = EF = BCDE = ABCF}\\
+ bde &- & + & - & + & + & - & -   & + & 3 &{\scriptsize AF = DE = BCEF = ABCD}\\
+ abd &+ & + & - & + & - & - & +   & - & 2 &{\scriptsize BD = CF = ACDE = ABEF}\\
+ cde &- & - & + & + & + & - & +   & - & 2 &{\scriptsize BF = CD = ACEF = ABDE}\\
+ acd &+ & - & + & + & - & - & -   & + & 3 &{\scriptsize AE = BC = DF = ABCDEF}\\
+ bcdf&- & + & + & + & - & + & -   & - & 1 &{\scriptsize ABD = BEF = ACF = CDE}\\
+abcdef&+ & + & + & + & + & + & +   & +& 4 &{\scriptsize ABF = BDE = ACD = CEF}
 \end{tabular}
+
+4Blk:ABD-ABF:1--;2+-;3-+;4++. $df_{no AE,ABD,ABF}$=1, $df_{Blk}$=3, $df_{T}$=15
+
+2Blk:ABD:1+3,2+4; ABF:1+2,3+4. $df_{noABD or ABF}$=1, $df_{Blk}$=1, $df_{T}$=15
 
 ANOVA-df: T$=2^kn-1$;Blk$=2^p-1$;E$=2^k(n-1)$;others=1
 
